[gd_scene load_steps=9 format=4 uid="uid://fpi4orbkll81"]

[ext_resource type="Texture2D" uid="uid://cefp2rc730r30" path="res://sprites/tiles/world_tiles_16.png" id="1_4tyb7"]
[ext_resource type="Texture2D" uid="uid://d03jnatiy20q7" path="res://sprites/tiles/menu_background.png" id="2_jmymy"]
[ext_resource type="Texture2D" uid="uid://cahmux5oojk6v" path="res://sprites/tiles/tile_selected.png" id="2_le3f8"]
[ext_resource type="Script" path="res://scripts/tile_map_cursor.gd" id="3_na3mi"]
[ext_resource type="PackedScene" uid="uid://c3n06ik3fjjbq" path="res://scenes/menu_ui.tscn" id="5_ysfkf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cdanu"]
texture = ExtResource("1_4tyb7")
0:0/0 = 0
1:0/0 = 0
1:0/0/z_index = 1
2:0/0 = 0
2:0/0/z_index = 2
3:0/0 = 0
3:0/0/z_index = 3
4:0/0 = 0
4:0/0/z_index = 4
5:0/0 = 0
5:0/0/z_index = 5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l2aev"]
texture = ExtResource("2_jmymy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_nrot4"]
sources/0 = SubResource("TileSetAtlasSource_cdanu")
sources/2 = SubResource("TileSetAtlasSource_l2aev")

[node name="Node2D" type="Node2D"]

[node name="TileMapWorld" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAAAAAAAAAACAAIAAAABAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAACAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAABAAAAAAACAAYAAAAFAAAAAAACAAcAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAABAAAAAAADAAMAAAACAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAEAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAABAAAAAAAFAAQAAAABAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAAEAAAAAAAGAAcAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAADAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAABAAAAAAAIAAcAAAABAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAADAAAAAAAKAAcAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAAAAAAAAABAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAABAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAAQAA0AAAAAAAAAAAAQAA4AAAABAAAAAAAQAA8AAAABAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAABAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAEAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAABAAAAAAATAAsAAAABAAAAAAATAAwAAAABAAAAAAATAA0AAAABAAAAAAATAA4AAAAAAAAAAAATAA8AAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAABAAAAAAAUAAoAAAABAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAABAAAAAAAUAA4AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAABAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAFAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAABAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAABAAAAAAAWAAkAAAABAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAAAAAAAAAAWAA0AAAABAAAAAAAWAA4AAAABAAAAAAAWAA8AAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAFAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAABAAAAAAAXAAgAAAABAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAABAAAAAAAXAA8AAAABAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAABAAAAAAAYAAYAAAABAAAAAAAYAAcAAAABAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAAABAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAABAAAAAAAZAAUAAAABAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAABAAAAAAAaAAUAAAAAAAAAAAAaAAYAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAADAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAABAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAEAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAABAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAACAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAABAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAIAAgAAAABAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAJAAgAAAABAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAABAAAAAAAKAA4AAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAABAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAAMAAgAAAADAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAABAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAABAAAAAAANAAwAAAABAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAABAAAAAAAOAA0AAAABAAAAAAAOAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAA8AAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA8AAAABAAAAAAAJAA8AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAABAA4AAAAAAAAAAAAKAAoAAAABAAAAAAAKAAsAAAABAAAAAAAKAAwAAAABAAAAAAAKAA0AAAABAAAAAAAJAA0AAAABAAAAAAAJAA4AAAABAAAAAAAIAA4AAAABAAAAAAAIAA8AAAABAAAAAAA=")
tile_set = SubResource("TileSet_nrot4")
script = ExtResource("3_na3mi")

[node name="Camera2D" type="Camera2D" parent="TileMapWorld"]
anchor_mode = 0

[node name="MouseGridSelected" type="Sprite2D" parent="."]
z_index = 7
texture = ExtResource("2_le3f8")

[node name="MenuUI" parent="." instance=ExtResource("5_ysfkf")]

[node name="Wood" type="Control" parent="."]
z_index = 4
layout_mode = 3
anchors_preset = 0
offset_left = 356.0
offset_top = 35.0
offset_right = 435.0
offset_bottom = 50.0
scale = Vector2(0.7, 0.7)

[node name="wood" type="Label" parent="Wood"]
layout_mode = 0
offset_left = -235.714
offset_top = -45.7143
offset_right = -165.714
offset_bottom = -29.7143
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0.298039, 0.788235, 1)
text = "wood:"
metadata/_edit_group_ = true

[node name="dataWood" type="Label" parent="Wood"]
layout_mode = 0
offset_left = -201.429
offset_top = -44.2857
offset_right = -131.429
offset_bottom = -28.2857
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.788235, 1, 0.788235, 1)
text = "9999"
metadata/_edit_group_ = true

[node name="Food" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 390.0
offset_top = 34.0
offset_right = 510.0
offset_bottom = 50.0
scale = Vector2(0.7, 0.7)

[node name="food" type="Label" parent="Food"]
layout_mode = 0
offset_left = -282.857
offset_top = -31.4286
offset_right = -212.857
offset_bottom = -15.4286
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0.298039, 0.788235, 1)
text = "food:"
metadata/_edit_group_ = true

[node name="dataFood" type="Label" parent="Food"]
layout_mode = 0
offset_left = -250.0
offset_top = -30.0
offset_right = -180.0
offset_bottom = -14.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.788235, 1, 0.788235, 1)
text = "99999"
metadata/_edit_group_ = true

[node name="Water" type="Control" parent="."]
z_index = 4
layout_mode = 3
anchors_preset = 0
offset_left = 159.0
offset_top = 33.0
offset_right = 279.0
offset_bottom = 49.0
scale = Vector2(0.7, 0.7)

[node name="water" type="Label" parent="Water"]
layout_mode = 0
offset_left = 118.571
offset_top = -44.2857
offset_right = 188.571
offset_bottom = -28.2857
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0.298039, 0.788235, 1)
text = "water:"
metadata/_edit_group_ = true

[node name="dataWater" type="Label" parent="Water"]
layout_mode = 0
offset_left = 160.0
offset_top = -42.8571
offset_right = 230.0
offset_bottom = -26.8571
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.788235, 1, 0.788235, 1)
text = "9999"
metadata/_edit_group_ = true

[node name="Metal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 191.0
offset_top = 9.0
offset_right = 311.0
offset_bottom = 25.0
scale = Vector2(0.7, 0.7)

[node name="metal" type="Label" parent="Metal"]
layout_mode = 0
offset_left = 73.7143
offset_top = 3.85715
offset_right = 143.714
offset_bottom = 19.8571
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0.298039, 0.788235, 1)
text = "metal:"
metadata/_edit_group_ = true

[node name="dataMetal" type="Label" parent="Metal"]
layout_mode = 0
offset_left = 114.286
offset_top = 4.28572
offset_right = 184.286
offset_bottom = 20.2857
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.788235, 1, 0.788235, 1)
text = "9999"
metadata/_edit_group_ = true

[node name="Name" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 67.0
offset_right = 187.0
offset_bottom = 16.0
scale = Vector2(0.7, 0.7)

[node name="name" type="Label" parent="Name"]
layout_mode = 0
offset_left = -44.2857
offset_right = 25.7143
offset_bottom = 16.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0, 0.298039, 0.788235, 1)
text = "name:"
metadata/_edit_group_ = true

[node name="dataName" type="Label" parent="Name"]
layout_mode = 0
offset_left = -10.0
offset_right = 100.0
offset_bottom = 16.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.788235, 1, 0.788235, 1)
text = "sdfasdfasdf"
metadata/_edit_group_ = true
